<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_account"
        style="@style/accountInputBorder"
        android:layout_marginTop="18dp" >

        <EditText
            android:id="@+id/edit_userid"
            style="@style/accountEditText"
            android:inputType="phone"
            android:hint="@string/login_account_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        style="@style/accountInputBorder"
        android:layout_below="@id/ll_account"
        android:layout_marginTop="15dp" >

        <EditText
            android:id="@+id/edit_password"
            style="@style/accountEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="@string/login_password_hint" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ll_password"
        android:layout_marginRight="18dp"
        android:layout_marginTop="15dp"
        android:onClick="forgetPasswd"
        android:clickable="true"
        android:text="@string/login_forget_password"
        android:textColor="@color/green"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_forget_password"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="13dp" >

        <Button
            android:id="@+id/login_reg"
            style="@style/accountButtonStyle"
            android:layout_marginRight="4dp"
            android:background="@drawable/btn_add_accounts"
            android:text="@string/login_add_accounts" />

        <Button
            android:id="@+id/login_submit"
            style="@style/accountButtonStyle"
            android:layout_marginLeft="4dp"
            android:background="@drawable/btn_quick_register"
            android:onClick="enter"
            android:text="@string/login_quick_register" />
    </LinearLayout>

</RelativeLayout>