<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/mainbg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/level2top"
        android:gravity="center_vertical|center_horizontal" >

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginStr"
            android:textSize="16sp"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_account"
        style="@style/accountInputBorder"
        android:layout_marginTop="18dp" >

        <EditText
            android:id="@+id/edit_userid"
            style="@style/loginEditText"
            android:inputType="phone"
            android:hint="@string/login_account_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        style="@style/accountInputBorder"
        android:layout_below="@id/ll_account"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" >

        <EditText
            android:id="@+id/edit_password"
            style="@style/loginEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="@string/login_password_hint" />
    </LinearLayout>

</LinearLayout>