<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/level2top"
        android:gravity="center_vertical|center_horizontal" >

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_serc_paypass"
            android:textSize="16sp"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_currpass"
        style="@style/accountInputBorder"
        android:layout_marginTop="18dp" >

        <EditText
            android:id="@+id/currpass"
            style="@style/loginEditText"
            android:inputType="textPassword"
            android:hint="@string/serc_currentpass"
            />
    </LinearLayout>

   <LinearLayout
        android:id="@+id/ll_password"
        style="@style/accountInputBorder"
        android:layout_below="@id/ll_account"
        android:layout_marginTop="15dp">


        <EditText
            android:id="@+id/change_password"
            style="@style/loginEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
                        android:hint="@string/serc_currentpass"
             />

    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/ll2_password"
        style="@style/accountInputBorder"
        android:layout_below="@id/ll_password"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" >

 
        <EditText
            android:id="@+id/change_password2"
            style="@style/loginEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="@string/serc_rechangepass"
            />

    </LinearLayout>

</LinearLayout>