<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#FFFFFF" >

    <RelativeLayout
       
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

            <RelativeLayout
                 android:id="@+id/scrcontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="13dp"
                        android:text="@string/admin_order_detail_ordernumber"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/admin_order_detail_ordernumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="13dp"
                        android:text=""
                        android:textColor="@color/blue"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/container"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="13dp"
                        android:text="@string/admin_order_detail_from"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/admin_order_detail_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="13dp"
                        android:text=""
                        android:textColor="@color/blue"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/container2"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="13dp"
                        android:text="@string/admin_order_detail_orderdate"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/admin_order_detail_orderdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="13dp"
                        android:text=""
                        android:textColor="@color/blue"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/container3"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="13dp"
                        android:text="@string/admin_order_detail_startdate"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/admin_order_detail_startdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="13dp"
                        android:text=""
                        android:textColor="@color/blue"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/container4"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="13dp"
                        android:text="@string/admin_order_detail_enddate"
                        android:textColor="@color/grey"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/admin_order_detail_enddate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="13dp"
                        android:text=""
                        android:textColor="@color/blue"
                        android:textSize="18sp" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/buttonArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/scrcontainer"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/admin_order_detail_back"
                    style="@style/accountButtonStyle"
                    android:background="@drawable/btn_add_accounts"
                    android:text="@string/admin_order_detail_back" />
            </LinearLayout>
    </RelativeLayout>

</ScrollView>