<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/parkdetail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="20dp"
            android:text="停车场"
            android:textColor="@color/deep_gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/parkdetail_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/parkdetail_name"
            android:layout_marginTop="5dp"
            android:background="@color/gray_white"
            android:gravity="right"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="位置"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/parkdetail_address"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_dropmenu"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/offine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="13dp"
                android:text="@string/admin_shenyu"
                android:textColor="@color/grey"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/cheweinumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="13dp"
                android:text="107"
                android:textColor="@color/blue"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/fabuChewei"
                style="@style/accountButtonStyle"
                android:layout_marginRight="4dp"
                android:background="@drawable/btn_add_accounts"
                android:text="@string/admin_fabu" />

            <Button
                android:id="@+id/reduceChewei"
                style="@style/accountButtonStyle"
                android:layout_marginLeft="4dp"
                android:background="@drawable/btn_quick_register"
                android:text="@string/admin_reduce" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>